cabal-version:      3.12
name:               jolharg-servant-examples
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Types.API.Auth
    Types.API.User
    Types.API.Users

  -- other-extensions:
  build-depends:
    , base                ^>=4.21.0.0
    , cookie              ^>=0.5.0
    , jolharg-servant     ^>=0.2.0.0
    , jolharg-web-models  ^>=0.2.0.0
    , jolharg-web-types   ^>=0.2.0.0
    , servant             ^>=0.20.2
    , text                ^>=2.1.2

  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-prepositive-qualified-module
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations

test-suite jolharg-servant-examples-test
  if arch(javascript) || arch(wasm32)
    buildable: False
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  main-is:            Spec.hs
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Wall -Werror -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-prepositive-qualified-module -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations
  build-depends:
    , base   ^>=4.21.0.0
    , hspec  ^>=2.11.10
  -- , jolharg-servant-examples
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.15.0.1
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
